# binance-lob-capture

./: .dockerignore  .env.example  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  notes.md
.github/workflows/: linux-build.yml
config/: symbols.example.txt
include/: book_session.hpp  config.hpp  csv_writer.hpp  json_min.hpp  metrics.hpp  order_book.hpp  replay.hpp  snapshot.hpp  spsc_ring.hpp  types.hpp  ws_client.hpp
sample/: market_data_spot_BTCUSDT_sample.csv  market_data_spot_BTCUSDT_sample_orderbook.csv  market_data_spot_BTCUSDT_sample_snapshots.csv
src/: book_session.cpp  config.cpp  csv_writer.cpp  json_min.cpp  main.cpp  order_book.cpp  replay.cpp  snapshot_beast.cpp  snapshot_stub.cpp  ws_client_beast.cpp  ws_client_stub.cpp
tests/: unit_tests.cpp
